<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Recording</string>
    <string name="my_recorder">My recorder</string>
    <string name="add_records">Add record</string>
    <string name="history">History</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="recorder_page_stop">If save the information as below into the diary?</string>
    <string name="start_time_lab">Start time</string>
    <string name="summary">Summary</string>
    <string name="my_recorder_rest_alert">If clear up the present counting information?</string>
    <string name="event_name">Event name</string>
    <string name="event_category">Event category</string>
    <string name="event_date">Event date</string>
    <string name="using_time">Using time</string>
    <string name="events_are_timed">events are timed.</string>
    <string name="event_is_timed">event is timed.</string>
    <string name="events_have_been_suspended">events have been suspended.</string>
    <string name="event_has_been_suspended">event has been suspended.</string>
    <string name="please_select_the_event">Please select the event.</string>
    <string name="configure_the_categories">Categories</string>
    <string name="configure_the_events">Events</string>
    <string name="enter_the_category_name">Enter the category name.</string>
    <string name="please_enter_the_category_name">Please enter the category name.</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="add_category">Add category</string>
    <string name="already_exists">already exists</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="has_been_used_in_the_event">Has been used in the event</string>
    <string name="edit_category">Edit category</string>
    <string name="no_changes">No changes.</string>
    <string name="this_information_will_not_be_saved">This information will not be saved.</string>
    <string name="do_you_want_to_delete">Do you want to delete</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="add_event">Add event</string>
    <string name="enter_the_event_name">Enter the event name</string>
    <string name="please_add_categories">Please add categories</string>
    <string name="or">or</string>
    <string name="modify_the_categories_for_the_enable">Modify the categories for the enable</string>
    <string name="attention">Attention</string>
    <string name="this_event_already_exists_in_the_category">This event already exists in the category</string>
    <string name="please_enter_the_event">Please enter the event.</string>
    <string name="order">Order</string>
    <string name="has_been_used_in_the_record">has been used in the record</string>
   	<string name="edit_event">Edit event</string> 
    <string name="please_enter_the_event_name">Please enter the event name</string>
    <string name="search">Search</string>
    <string name="event">Event</string>
    <string name="category">Category</string>
    <string name="to">to</string>
    <string name="timer_can_not_exceed_24_hours">Timer can not exceed 24 hours</string>
    <string name="diary">Diary</string>
    <string name="total_using_time">Total using time</string>
    <string name="exit">Exit</string>
    <string name="even_through_quit_the_app_the_timer_will_still_work">Even through quit the app, the timer will still work.</string>
    <string name="add">Add</string>
    <string name="successfully_added">successfully added</string>
    <string name="please_select_a_category">Please select a category.</string>
    <string name="please_select_an_event">Please select an event.</string>
</resources>