<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_recorder_main_bg" >

    <ImageView
        android:id="@+id/record_history_search_dialog_title_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:background="@drawable/ic_search_normal" />

    <TextView
        android:id="@+id/record_history_search_dialog_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/record_history_search_dialog_title_icon"
        android:layout_marginBottom="18dp"
        android:layout_toRightOf="@+id/record_history_search_dialog_title_icon"
        android:text="@string/search"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/record_history_search_dialog_dividing_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/record_history_search_dialog_title_icon"
        android:layout_marginBottom="5dp"
        android:background="@drawable/pager_title_strip" />

    <!-- category -->

    <TextView
        android:id="@+id/record_history_search_dialog_event_category_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/record_history_search_dialog_event_category_name"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/record_history_search_dialog_dividing_line"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/category"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/record_history_search_dialog_event_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_history_search_dialog_dividing_line"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/record_history_search_dialog_event_category_name_label" />

    <!-- event -->

    <TextView
        android:id="@+id/record_history_search_dialog_event_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/record_history_search_dialog_event_name"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/record_history_search_dialog_event_category_name_label"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/event"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/record_history_search_dialog_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_history_search_dialog_event_category_name"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/record_history_search_dialog_event_name_label" />

    <!-- event date -->

    <EditText
        android:id="@+id/record_history_search_dialog_event_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/record_history_search_dialog_event_name_label"
        android:layout_marginLeft="15dp"
        android:hint="@string/event_date" />

    <TextView
        android:id="@+id/record_history_search_dialog_event_date_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_alignBottom="@+id/record_history_search_dialog_event_date_from"
        android:layout_toRightOf="@+id/record_history_search_dialog_event_date_from"
        android:text="@string/to" 
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/record_history_search_dialog_event_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/record_history_search_dialog_event_date_from"
        android:layout_toRightOf="@+id/record_history_search_dialog_event_date_to_label"
        android:hint="@string/event_date" />

    <ImageButton
        android:id="@+id/record_history_search_dialog_search_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_history_search_dialog_event_date_to"
        android:layout_centerHorizontal="true"
        android:background="@drawable/search_but_selector" />

</RelativeLayout>